      do not ask to add network sources
  * DistUpgrade/DistUpgradeCache.py:
    - do not crash if lookupRecords() failed (LP: #199482)
  * UpdateManager/UpdateManager.py:
    - use absolute path when calling gksu (LP: #194166),
      Thanks to Mihai Varzaru and James Westby
  * data/update-manager.desktop.in:
    - improve consistency with the rest of gnome (LP: #150205)

 --

update-manager (1:0.87.10) hardy; urgency=low

  * remove code duplication in the confirmChanges() code and make the
    warning more readable (LP: #188724)
  * DistUpgrade/DistUpgradeController.py:
    - when adding prerequists, ensure that no duplicated lines are
      added, plus add test for this (thanks to Kolbjørn Barmen)
    - honor APT::Get::AllowUnauthenticated (thanks to Kolbjørn 
      Barmen)
  * DistUpgrade/cdromupgrade:
    - updated to hardy
    - fix bug in path handling (LP: #155833)
  * DistUpgrade/prerequists-sources.list:
    - remove cruft

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 29 Feb 2008 23:23:38 +0100

update-manager (1:0.87.9) hardy; urgency=low

  * rebuild due to python-central issues

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 19 Feb 2008 18:11:08 +0100

update-manager (1:0.87.8) hardy; urgency=low

  * deal with packages in broken reqreinst state by
    offering to remove them (LP: #1922578)
  * UpdateManager/UpdateManager.py:
    - display a meaningful message when no information
      of the last update can be found (LP: 192328)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Feb 2008 17:08:47 +0100

update-manager (1:0.87.7) hardy; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - honor DEBUG_UPDATE_MANAGER environment and give some
      debug output on the meta-release fetching/parsing
  * UpdateManager/DistUpgradeFetcher.py:
    - cancel if the ReleaseNotes window is closed via the 
      window close control (thanks to Matthew Paul Thomas)
  * DistUpgrade/DistUpgradeViewGtk.py: