@@ -10,6 +10,10 @@ update-manager (1:0.87.11) hardy; urgency=low
       Thanks to Mihai Varzaru and James Westby
   * data/update-manager.desktop.in:
     - improve consistency with the rest of gnome (LP: #150205)
+  * DistUpgrade/DistUpgradeViewKDE.py:
+    - do no longer use konsole during upgrades but use a dumb
+      terminal instead
+    - log terminal activity to /var/log/dist-upgrade/term.log
 
  --
 
